deploy-output.log
file:///home/ayorba/.openclaw/anthony-agent/fogmemory/contracts/scripts/deploy-full.ts:1
import { ethers } from "hardhat";
         ^^^^^^
SyntaxError: Named export 'ethers' not found. The requested module 'hardhat' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'hardhat';
const { ethers } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
